package booking;
public interface BCommand {
    void execute();
}
